add update of arrays according to checkbox selected - statistics.html for admin

--- a/html/statistics.html
+++ b/html/statistics.html
@@ -148,7 +148,7 @@
             </div>
             <div class="modal-footer">
                 <button class="btn btn-md btn-info m-1 px-3" type="button" data-dismiss="modal" aria-label="Close"
-                        ng-click="$scope.show_statistics(true)"> Apply changes</button>
+                        ng-click="show_statistics(true)"> Apply changes</button>
             </div>
         </div>
     </div>
