--- a/html/statistics.html
+++ b/html/statistics.html
@@ -17,34 +17,41 @@
         </div>
     </div>
 
-    <div class="row">
-        <hr style="margin-top: 0.7rem; margin-bottom: 0.7rem;">
-    </div>
-
-    <div class="row">
-
-        <div class="col-sm-6">
-            <canvas id="confidenceLineGraphAggregate"></canvas>
+    <div id="statistics_body_full">
+        <div class="row">
+            <hr style="margin-top: 0.7rem; margin-bottom: 0.7rem;">
         </div>
 
-        <div class="col-sm-6">
-            <canvas id="timeBarGraphAggregate"></canvas>
+        <div class="row">
+
+            <div class="col-sm-6">
+                <canvas id="confidenceLineGraphAggregate"></canvas>
+            </div>
+
+            <div class="col-sm-6">
+                <canvas id="timeBarGraphAggregate"></canvas>
+            </div>
+
         </div>
 
+        <!--<div class="row">
+            <div class="col"></div>
+
+            <div class="col-sm-10">
+                <canvas id="correctAnswersBar"></canvas>
+            </div>
+
+            <div class="col"></div>
+
+        </div>-->
     </div>
 
-    <div class="row">
-        <div class="col"></div>
-
-        <div class="col-sm-10">
-            <canvas id="correctAnswersBar"></canvas>
-        </div>
-
-        <div class="col"></div>
-
+    <div id="statistics_body_empty">
+        <h2>No data is available to show. Please choose users and groups to show data about.</h2>
     </div>
 
-</div>
+
+    </div>
 
 <div class="modal fade" id="filter_statistics_modal" tabindex="-1" role="dialog" aria-labelledby="Filter Statistics Modal" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
