--- a/html/exp.html
+++ b/html/exp.html
@@ -2,9 +2,16 @@
 
     <div class="row">
         <div class="col">
-            <h3 id="exp_hello">
 
-            </h3>
+            <div class="row">
+                <div class="col-sm-7">
+                    <h3 id="exp_hello"></h3>
+                </div>
+                <div class="col-sm-5">
+                    <h3 id="time_elapsed" style="float: right;"></h3>
+                </div>
+            </div>
+
             <hr style="margin-top: 0.7rem; margin-bottom: 0.7rem;">
         </div>
     </div>
@@ -144,7 +151,7 @@
         <div class="col-sm-10">
             <table class="table" style="display: block; overflow: auto;">
                 <tr>
-                    <td style="width: 40%">
+                    <td style="width: 35%; text-align: center">
                         <div class="custom-control custom-radio custom-control-inline">
                             <input type="radio" class="custom-control-input" id="user_ans_yes" ng-model="user_ans_match" ng-value="1" name="user_ans_match">
                             <label class="custom-control-label" for="user_ans_yes">Match</label>
@@ -155,7 +162,7 @@
                             <label class="custom-control-label" for="user_ans_no">No Match</label>
                         </div>
                     </td>
-                    <td style="width: 60%">
+                    <td style="width: 65%">
                         <div>
                             <div class="md-form" style="margin: 0 auto;float: none;">
                                 <form oninput="text_confidence_input.value=document.getElementById('user_confidence').value">
