add shared corr to each term - exp

--- a/html/exp.html
+++ b/html/exp.html
@@ -8,7 +8,7 @@
                     <h3 id="exp_hello"></h3>
                 </div>
                 <div class="col-sm-5">
-                    <h3 id="time_elapsed" style="float: right;"></h3>
+                    <h6 id="time_elapsed" style="float: right; margin-top: 9px;"></h6>
                 </div>
             </div>
 
@@ -45,6 +45,14 @@
 
             <div id="A_col_instance" style="font-weight: 100; text-align:center">
                 A, B
+            </div>
+
+            <div id="more_shared_correspondence_A" style="font-weight: 400; text-align:center">
+                Other Correspondence With Term A
+            </div>
+
+            <div id="A_more_shared_correspondence_names" style="font-weight: 100; text-align:center">
+                Name, Room, Building
             </div>
 
         </div>
@@ -140,6 +148,15 @@
             <div id="B_col_instance" style="font-weight: 100; text-align:center">
                 A, B
             </div>
+
+            <div id="more_shared_correspondence_B" style="font-weight: 400; text-align:center">
+                Other Correspondence With Term B
+            </div>
+
+            <div id="B_more_shared_correspondence_names" style="font-weight: 100; text-align:center">
+                Name, Room, Building
+            </div>
+
         </div>
 
         <div class="col"></div>
