--- a/html/statistics.html
+++ b/html/statistics.html
@@ -34,6 +34,18 @@
 
         </div>
 
+        <div class="row">
+
+            <div class="col-sm-6">
+                <canvas id="heatMapGraphAggregate"></canvas>
+            </div>
+
+            <div class="col-sm-6">
+                <canvas id="evaluationMeasuresGraphAggregate"></canvas>
+            </div>
+
+        </div>
+
     </div>
 
     <div id="statistics_body_empty" style="text-align: center">
