--- a/html/finish_exp.html
+++ b/html/finish_exp.html
@@ -50,7 +50,7 @@
 
     </div>
 
-    <div id="heatMap_container" style="height: 400px; min-width: 310px; max-width: 800px; margin: 0 auto"></div>
+    <div id="heatMapUser" style="height: 400px; min-width: 310px; max-width: 800px; margin: 0 auto"></div>
 
 </div>
 
