--- a/html/statistics.html
+++ b/html/statistics.html
@@ -38,16 +38,19 @@
 
         <div class="row">
 
-            <div class="col-sm-6">
-                <canvas id="heatMapGraphAggregate"></canvas>
+            <div class="col-sm-12">
+                <div id="heatMapGraphAggregate" style="height: 400px; min-width: 310px; max-width: 800px; margin: 0 auto"></div>
             </div>
+
+        </div>
+
+        <div class="row">
 
             <div class="col-sm-6">
                 <canvas id="evaluationMeasuresGraphAggregate"></canvas>
             </div>
 
         </div>
-
     </div>
 
     <div id="statistics_body_empty" style="text-align: center">
