add heat map to stats admin -- test

--- a/html/statistics.html
+++ b/html/statistics.html
@@ -52,7 +52,7 @@
 
     <div id="statistics_body_empty" style="text-align: center">
         <h2>No data is available to show.<br>
-            Please choose users and groups to show data about.</h2>
+            Please choose users and groups to show data about by the filter option.</h2>
     </div>
 
 
