change train and test order - test is Constant and train randomly

--- a/html/home.html
+++ b/html/home.html
@@ -19,7 +19,7 @@
  <br>
  There are three parts at the trail: Logical riddles, first stage, second stage.
  <br>
- please click at "The Experiment" at the top of the page.
+ Please click at "The Experiment" at the top of the page.
 
 
 </div>
