add major decision to exp html

--- a/html/exp.html
+++ b/html/exp.html
@@ -48,7 +48,7 @@
                 A, B
             </div>
 
-            <br>
+            <!--<br>
 
             <div id="more_shared_correspondence_A" style="font-weight: 400; text-align:center">
                 Other Correspondence With Term A
@@ -56,19 +56,31 @@
 
             <div id="A_more_shared_correspondence_names" style="font-weight: 100; text-align:center">
                 Name, Room, Building
-            </div>
+            </div>-->
 
         </div>
 
         <div class="col-sm-5">
 
-            <div id="row_control" style="text-align:center; font-weight: 400">
-                System Suggestion
-            </div>
+            <table class="table" id="suggestionAndMajorOpinionTable" style="height: 300px; display: block; overflow: auto;">
+                <tr>
+                    <th id="row_control" scope="col" style="width: 25%; text-align:center; font-weight: 400">
+                        System Suggestion
+                    </th>
+                    <th id="major_decision" scope="col" style="width: 25%; text-align:center; font-weight: 400">
+                        Majority decision
+                    </th>
+                </tr>
 
-            <div id="exp_pair_score" style="font-weight: 100; text-align:center">
-                0.6
-            </div>
+                <tr>
+                    <td id="exp_pair_score" scope="col" style="width: 25%; text-align:center; font-weight: 100">
+                        0.6
+                    </td>
+                    <td id="exp_pair_major" scope="col" style="width: 25%; text-align:center; font-weight: 100">
+                        80% Match
+                    </td>
+                </tr>
+            </table>
 
             <br>
 
@@ -152,7 +164,7 @@
                 A, B
             </div>
 
-            <br>
+            <!--<br>
 
             <div id="more_shared_correspondence_B" style="font-weight: 400; text-align:center">
                 Other Correspondence With Term B
@@ -160,7 +172,7 @@
 
             <div id="B_more_shared_correspondence_names" style="font-weight: 100; text-align:center">
                 Name, Room, Building
-            </div>
+            </div>-->
 
         </div>
 
