add major decision to exp html + php

--- a/html/exp.html
+++ b/html/exp.html
@@ -62,7 +62,7 @@
 
         <div class="col-sm-5">
 
-            <table class="table" id="suggestionAndMajorOpinionTable" style="height: 300px; display: block; overflow: auto;">
+            <table class="table" id="suggestionAndMajorOpinionTable" style="display: block; overflow: auto;">
                 <tr>
                     <th id="row_control" scope="col" style="width: 25%; text-align:center; font-weight: 400">
                         System Suggestion
@@ -81,8 +81,6 @@
                     </td>
                 </tr>
             </table>
-
-            <br>
 
             <table class="table" id="HierarchyTable" style="height: 300px; display: block; overflow: auto;">
                 <tr>
