add count down of time - 3 minutes

--- a/html/exp.html
+++ b/html/exp.html
@@ -84,10 +84,10 @@
 
             <table class="table" id="HierarchyTable" style="height: 300px; display: block; overflow: auto;">
                 <tr>
-                    <th scope="col" style="width: 25%">
+                    <th scope="col" style="width: 25%; text-align:center; font-weight: 400">
                         Term A Hierarchy
                     </th>
-                    <th scope="col" style="width: 25%">
+                    <th scope="col" style="width: 25%; text-align:center; font-weight: 400">
                         Term B Hierarchy
                     </th>
                 </tr>
