--- a/html/nav.html
+++ b/html/nav.html
@@ -3,7 +3,8 @@
 <div id="nav">
 	<nav class="navbar fixed-top navbar-expand-lg navbar-light white scrolling-navbar" style="height: 56px">
 		<div class="container">
-			<a class="navbar-brand" href="#" ng-click="" id="navHeader">Schema Matching</a>
+			<img border="0" alt="InCognitoMatch" src="/images/systemLogo.png">
+			<!--<a class="navbar-brand" href="#" ng-click="" id="navHeader">Schema Matching</a>-->
 			<!-- Left links-->
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav mr-auto">
