update system logo

--- a/html/nav.html
+++ b/html/nav.html
@@ -4,7 +4,7 @@
 	<nav class="navbar fixed-top navbar-expand-lg navbar-light white scrolling-navbar" style="height: 56px">
 		<div class="container">
 			<img border="0" alt="InCognitoMatch" src="/images/systemLogo.png">
-			<!--<a class="navbar-brand" href="#" ng-click="" id="navHeader">Schema Matching</a>-->
+			<a class="navbar-brand" href="#" ng-click="" id="navHeader">InCognitoMatch</a>
 			<!-- Left links-->
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav mr-auto">
