update system logo

--- a/html/nav.html
+++ b/html/nav.html
@@ -2,9 +2,9 @@
 
 <div id="nav">
 	<nav class="navbar fixed-top navbar-expand-lg navbar-light white scrolling-navbar" style="height: 56px">
-		<div class="container">
-			<img border="0" alt="InCognitoMatch" src="/images/systemLogo.png">
-			<a class="navbar-brand" href="#" ng-click="" id="navHeader">InCognitoMatch</a>
+		<div class="container" style="padding-left: 0px; margin-left: 0px;">
+			<img border="0" alt="InCognitoMatch" src="/images/systemLogo.png" style="height: 53px;">
+			<a class="navbar-brand" href="#" ng-click="" id="navHeader" style="padding-left: 10px;">InCognitoMatch</a>
 			<!-- Left links-->
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav mr-auto">
