--- a/html/finish_exp.html
+++ b/html/finish_exp.html
@@ -50,7 +50,17 @@
 
     </div>
 
-    <div id="heatMapUser" style="height: 400px; min-width: 310px; max-width: 800px; margin: 0 auto"></div>
+    <div class="row">
+
+        <div class="col-sm-8">
+            <div id="heatMapUser" style="height: 400px; min-width: 310px; max-width: 800px; margin: 0 auto"></div>
+        </div>
+
+        <div class="col-sm-4">
+            <div id="closestMatch"></div>
+        </div>
+
+    </div>
 
 </div>
 
