add pie to finish_exp.html

--- a/html/finish_exp.html
+++ b/html/finish_exp.html
@@ -57,7 +57,8 @@
         </div>
 
         <div class="col-sm-4">
-            <div id="closestMatch"></div>
+            <canvas id="closestMatch"></canvas>
+            <!--<div id="closestMatch"></div>-->
         </div>
 
     </div>
