--- a/html/finish_exp.html
+++ b/html/finish_exp.html
@@ -57,7 +57,7 @@
         </div>
 
         <div class="col-sm-4">
-            <canvas id="closestMatch"></canvas>
+            <!--<canvas id="closestMatch"></canvas>-->
             <!--<div id="closestMatch"></div>-->
         </div>
 
