add text and size to slices

--- a/html/home.html
+++ b/html/home.html
@@ -22,7 +22,7 @@
  Please click at "The Experiment" at the top of the page.
 
 
- <canvas id="closestMatch"></canvas>
+ <canvas id="closestMatch" width="300" height="600"></canvas>
 
 
 </div>
