add text and size to slices

--- a/html/home.html
+++ b/html/home.html
@@ -21,9 +21,13 @@
  <br>
  Please click at "The Experiment" at the top of the page.
 
+ <div class="row">
 
- <canvas id="closestMatch" width="300" height="600"></canvas>
+  <div class="col-sm-4">
+    <canvas id="closestMatch" style="display: inline-block"></canvas>
+  </div>
 
+ </div>
 
 </div>
 
