add text and size to slices

--- a/html/home.html
+++ b/html/home.html
@@ -21,8 +21,17 @@
  <br>
  Please click at "The Experiment" at the top of the page.
 
+ <div class="row">
 
-    <canvas id="closestMatch" style="display: inline-block"></canvas>
+  <div class="col-sm-8">
+   <div>TEST</div>
+  </div>
+
+  <div class="col-sm-4">
+    <canvas id="closestMatch"></canvas>
+  </div>
+
+ </div>
 
 
 </div>
