add text and size to slices

--- a/html/home.html
+++ b/html/home.html
@@ -1,5 +1,5 @@
 <div id="home" style="margin-top: 90px;margin-left: 30px">
-
+<!--
  In this experiment you will be asked to decide if a pair is match or not match and to scale your confidence level.
  <br>
  each pair consist from 2 terms from two different schemes.
@@ -19,7 +19,7 @@
  <br>
  There are three parts at the trail: Logical riddles, first stage, second stage.
  <br>
- Please click at "The Experiment" at the top of the page.
+ Please click at "The Experiment" at the top of the page.-->
 
  <div class="row">
 
