add text and size to slices

--- a/html/home.html
+++ b/html/home.html
@@ -28,7 +28,7 @@
   </div>
 
   <div class="col-sm-4">
-    <canvas id="closestMatch"></canvas>
+    <canvas id="closestMatch" style="height: 400px; width: 310px; margin: 0 auto"></canvas>
   </div>
 
  </div>
