add text and size to slices

--- a/html/finish_exp.html
+++ b/html/finish_exp.html
@@ -57,8 +57,7 @@
         </div>
 
         <div class="col-sm-4">
-            <!--<canvas id="closestMatch"></canvas>-->
-            <!--<div id="closestMatch"></div>-->
+            <canvas id="closestMatch" style="height: 400px; width: 310px; margin: 0 auto"></canvas>
         </div>
 
     </div>
