add text and size to slices

--- a/html/finish_exp.html
+++ b/html/finish_exp.html
@@ -57,7 +57,9 @@
         </div>
 
         <div class="col-sm-4">
-            <canvas id="closestMatch" style="height: 400px; width: 310px; margin: 0 auto"></canvas>
+            <div style="display: inline-block">
+                <canvas id="closestMatch" style="height: 400px; width: 310px; margin: 0 auto"></canvas>
+            </div>
         </div>
 
     </div>
