add text and size to slices

--- a/html/finish_exp.html
+++ b/html/finish_exp.html
@@ -36,7 +36,16 @@
 
     </div>
 
-
+    <div class="row">
+        <div class="col">
+            <div class="row">
+                <div class="col-sm-8">
+                    <h3>Experiment Summary</h3>
+                </div>
+            </div>
+            <hr style="margin-top: 0.7rem; margin-bottom: 0.7rem;">
+        </div>
+    </div>
 
     <div class="row">
 
