change pie to highcharts pie

--- a/html/finish_exp.html
+++ b/html/finish_exp.html
@@ -66,9 +66,10 @@
         </div>
 
         <div class="col-sm-4">
-            <div style="display: inline-block">
+            <!--<div style="display: inline-block">
                 <canvas id="closestMatch" style="height: 400px; width: 310px; margin: 0 auto"></canvas>
-            </div>
+            </div>-->
+            <div id="closestMatch" style="height: 400px; width: 310px; margin: 0 auto"></div>
         </div>
 
     </div>
