change pie to highcharts pie

--- a/html/finish_exp.html
+++ b/html/finish_exp.html
@@ -69,7 +69,7 @@
             <!--<div style="display: inline-block">
                 <canvas id="closestMatch" style="height: 400px; width: 310px; margin: 0 auto"></canvas>
             </div>-->
-            <div id="closestMatch" style="height: 400px; width: 310px; margin: 0 auto"></div>
+            <div id="closestMatch" style="display: inline-block; margin: 0 auto"></div>
         </div>
 
     </div>
