update pie style

--- a/html/home.html
+++ b/html/home.html
@@ -1,5 +1,5 @@
 <div id="home" style="margin-top: 90px;margin-left: 30px">
-
+<!--
  In this experiment you will be asked to decide if a pair is match or not match and to scale your confidence level.
  <br>
  each pair consist from 2 terms from two different schemes.
@@ -19,7 +19,22 @@
  <br>
  There are three parts at the trail: Logical riddles, first stage, second stage.
  <br>
- Please click at "The Experiment" at the top of the page.
+ Please click at "The Experiment" at the top of the page.-->
+
+ <div class="row">
+
+  <div class="col-sm-8">
+   <div id="heatMapUser" style="height: 400px; min-width: 310px; max-width: 800px; margin: 0 auto"></div>
+  </div>
+
+  <div class="col-sm-4">
+   <!--<div style="display: inline-block">
+       <canvas id="closestMatch" style="height: 400px; width: 310px; margin: 0 auto"></canvas>
+   </div>-->
+   <div id="closestMatch" style="width: 600px; height: 400px; margin: 0 auto; font-size: 20px" align="center"></div>
+  </div>
+
+ </div>
 
 
 </div>
