--- a/html/home.html
+++ b/html/home.html
@@ -28,10 +28,7 @@
   </div>
 
   <div class="col-sm-4">
-   <!--<div style="display: inline-block">
-       <canvas id="closestMatch" style="height: 400px; width: 310px; margin: 0 auto"></canvas>
-   </div>-->
-   <div id="closestMatch" style="width: 600px; height: 400px; margin: 0 auto; font-size: 20px" align="center"></div>
+   <div id="closestMatch" style="width: 334px; height: 358px; margin: 0 auto;" align="center"></div>
   </div>
 
  </div>
