--- a/html/finish_exp.html
+++ b/html/finish_exp.html
@@ -68,10 +68,7 @@
         </div>
 
         <div class="col-sm-4">
-            <!--<div style="display: inline-block">
-                <canvas id="closestMatch" style="height: 400px; width: 310px; margin: 0 auto"></canvas>
-            </div>-->
-            <div id="closestMatch" style="display: inline-block; margin: 0 auto"></div>
+            <div id="closestMatch" style="width: 334px; height: 358px; margin: 0 auto;" align="center"></div>
         </div>
 
     </div>
