add legend to pie

--- a/html/home.html
+++ b/html/home.html
@@ -20,7 +20,7 @@
  <br>
  Please click at "The Experiment" at the top of the page.
 
-
+<!--
 <div class="row">
 
   <div class="col-sm-8">
@@ -31,7 +31,7 @@
    <div id="closestMatch" style="width: 334px; height: 358px; margin: 0 auto;" align="center"></div>
   </div>
 
- </div>
+ </div>-->
 
 
 </div>
