add legend to pie

--- a/html/statistics.html
+++ b/html/statistics.html
@@ -43,7 +43,7 @@
             </div>
 
             <div class="col-sm-4">
-                <canvas id="evaluationMeasuresGraphAggregate" style="height: 400px;"></canvas>
+                <canvas id="evaluationMeasuresGraphAggregate" height="400"></canvas>
             </div>
 
         </div>
