update style to nav bar

--- a/html/home.html
+++ b/html/home.html
@@ -1,4 +1,4 @@
-<div id="home" style="margin-top: 90px;margin-left: 30px">
+<div id="home" style="margin-top: 90px;margin-left: 30px; text-align: center">
  In this experiment you will be asked to decide if a pair is match or not match and to scale your confidence level.
  <br>
  each pair consist from 2 terms from two different schemes.
@@ -9,11 +9,11 @@
  <br>
  The color in the hierarchy:
  <br>
- green - Parent of the term in the hierarchy.
+ <p style="color: green">Green</p> - Parent of the term in the hierarchy.
  <br>
- red - The Term.
+ <p style="color: red">Red</p> - The Term.
  <br>
- blue - Sibling of the term in the hierarchy.
+ <p style="color: blue">Blue</p> - Sibling of the term in the hierarchy.
  <br>
  <br>
  There are three parts at the trail: Logical riddles, first stage, second stage.
