change heat map coordinate normalization

--- a/html/home.html
+++ b/html/home.html
@@ -9,11 +9,11 @@
  <br>
  The color in the hierarchy:
  <br>
- <p style="color: green">Green</p> - Parent of the term in the hierarchy.
+ <em style="color: green">Green</em> - Parent of the term in the hierarchy.
  <br>
- <p style="color: red">Red</p> - The Term.
+ <em style="color: red">Red</em> - The Term.
  <br>
- <p style="color: blue">Blue</p> - Sibling of the term in the hierarchy.
+ <em style="color: blue">Blue</em> - Sibling of the term in the hierarchy.
  <br>
  <br>
  There are three parts at the trail: Logical riddles, first stage, second stage.
