--- a/html/home.html
+++ b/html/home.html
@@ -20,18 +20,17 @@
  <br>
  Please click at "The Experiment" at the top of the page.
 
-<!--
+<!-- -->
 <div class="row">
 
   <div class="col-sm-8">
-   <div id="heatMapUser" style="height: 400px; min-width: 310px; max-width: 800px; margin: 0 auto"></div>
   </div>
 
   <div class="col-sm-4">
    <div id="closestMatch" style="width: 334px; height: 358px; margin: 0 auto;" align="center"></div>
   </div>
 
- </div>-->
+ </div>
 
 
 </div>
