round score of alg and hide figure eight finish screen part

--- a/html/finish_exp.html
+++ b/html/finish_exp.html
@@ -4,7 +4,7 @@
 		Thank You!
 	</h1>
 
-    <div class="row">
+    <!--<div class="row">
         <div class="col-sm-2"></div>
         <div class="col-sm-8">
             <div class="md-form">
@@ -34,7 +34,7 @@
         <h5 id="show_message_after_finish_figure_8">
         </h5>
 
-    </div>
+    </div>-->
 
     <div class="row">
         <div class="col">
