update show \ hide parts from exp by admin settings

--- a/html/exp.html
+++ b/html/exp.html
@@ -63,7 +63,7 @@
 
             <table class="table" id="suggestionAndMajorOpinionTable" style="display: block; overflow: auto;">
                 <tr>
-                    <th id="row_control" scope="col" style="width: 25%; text-align:center; font-weight: 400">
+                    <th id="system_suggest" scope="col" style="width: 25%; text-align:center; font-weight: 400">
                         System Suggestion
                     </th>
                     <th id="major_decision" scope="col" style="width: 25%; text-align:center; font-weight: 400">
@@ -150,9 +150,8 @@
                 String
             </div>
 
-            <br>
-
             <div id="row_instance_B" style="font-weight: 400; text-align:center">
+                <br>
                 Instance Example
             </div>
 
