--- a/html/nav.html
+++ b/html/nav.html
@@ -64,7 +64,6 @@
 	</nav>
 		<!-- Static navbar -->
 
-
 	<div class="modal fade" id="add_exp_modal" tabindex="-1" role="dialog" aria-labelledby="Add User Modal" aria-hidden="true">
 		<div class="modal-dialog modal-lg" role="document">
 			<div class="modal-content">
@@ -88,30 +87,39 @@
 										   aria-describedby="material-addon2">
 								</div>
 								<div class="col-sm-10 md-form mb-4">
-									<input type="text" id="exp_num_pairs" class="form-control" placeholder="Pairs To Display" aria-label="Pairs To Display"
+									<input type="text" id="exp_max_num_pairs" class="form-control" placeholder="Max. Pairs To Display" aria-label="Max. Pairs To Display"
+										   aria-describedby="material-addon3">
+								</div>
+
+								<div class="col-sm-10 md-form mb-4">
+									<input type="text" id="exp_max_duration" class="form-control" placeholder="Max. Experiment Duration (Minutes)" aria-label="Max. Experiment Duration"
 										   aria-describedby="material-addon3">
 								</div>
 							</div>
 							<div class="col" style="margin-top: 25px">
 								<div class="custom-control custom-checkbox">
-									<input type="checkbox" class="custom-control-input" id="show_instance">
-									<label class="custom-control-label" for="show_instance">Display instances</label>
-								</div>
-								<div class="custom-control custom-checkbox">
 									<input type="checkbox" class="custom-control-input" id="show_type">
 									<label class="custom-control-label" for="show_type">Display type</label>
+								</div>
+								<div class="custom-control custom-checkbox">
+									<input type="checkbox" class="custom-control-input" id="show_instance">
+									<label class="custom-control-label" for="show_instance">Display instances</label>
 								</div>
 								<div class="custom-control custom-checkbox">
 									<input type="checkbox" class="custom-control-input" id="show_hierarchy">
 									<label class="custom-control-label" for="show_hierarchy">Display Hierarchy</label>
 								</div>
 								<div class="custom-control custom-checkbox">
-									<input type="checkbox" class="custom-control-input" id="show_feedback">
-									<label class="custom-control-label" for="show_feedback">Feedback</label>
+									<input type="checkbox" class="custom-control-input" id="show_system_sugg">
+									<label class="custom-control-label" for="show_system_sugg">Display system suggestion</label>
 								</div>
 								<div class="custom-control custom-checkbox">
-									<input type="checkbox" class="custom-control-input" id="show_control">
-									<label class="custom-control-label" for="show_control">Control</label>
+									<input type="checkbox" class="custom-control-input" id="show_major_res">
+									<label class="custom-control-label" for="show_major_res">Display majority decision</label>
+								</div>
+								<div class="custom-control custom-checkbox">
+									<input type="checkbox" class="custom-control-input" id="set_active">
+									<label class="custom-control-label" for="set_active">Set active</label>
 								</div>
 							</div>
 						</div>
@@ -128,8 +136,6 @@
 									</div>
 							</div>
 						</div>
-
-
 
 						<ul class="nav nav-tabs" id="myTab" role="tablist">
 							<li class="nav-item">
@@ -199,13 +205,6 @@
 								</div>
 							</div>
 						</div>
-
-
-
-
-
-
-
 -->
 					</form>
 				</div>
