--- a/html/nav.html
+++ b/html/nav.html
@@ -64,12 +64,12 @@
 	</nav>
 		<!-- Static navbar -->
 
-	<div class="modal fade" id="add_exp_modal" tabindex="-1" role="dialog" aria-labelledby="Add User Modal" aria-hidden="true">
+	<div class="modal fade" id="add_exp_modal" tabindex="-1" role="dialog" aria-labelledby="Add Exp Modal" aria-hidden="true">
 		<div class="modal-dialog modal-lg" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
 					<h5 class="modal-title" >Add Experiment</h5>
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="clear_add_exp_form()">
 						<span aria-hidden="true">&times;</span>
 					</button>
 				</div>
@@ -213,7 +213,7 @@
 
 					</div>
 					<button class="btn btn-md btn-info m-1 px-3" type="button" ng-click="add_exp()">Add Experiment</button>
-					<button class="btn btn-md btn-info m-0 px-3" type="button" data-dismiss="modal">Close</button>
+					<button class="btn btn-md btn-info m-0 px-3" type="button" data-dismiss="modal" ng-click="clear_add_exp_form()">Close</button>
 				</div>
 			</div>
 		</div>
